[package]
name = "qq-rich-msg-decode"
version = "0.1.0"
authors = ["BeiyanYunyi <14120445+BeiyanYunyi@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
protobuf = "3.4.0"
protobuf-json-mapping = "3.4.0"

[build-dependencies]
protobuf-codegen = "3.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
